# randbenches

./: Cargo.toml
benches/: fastrand_range.rs  rand_chacha_fill_u8.rs  rand_chacha_u64.rs  rand_xoshiro_fill_u8.rs  rand_xoshiro_range.rs  rand_xoshiro_range_f64.rs  rand_xoshiro_u64.rs  smallrand_chacha_fill_u8.rs  smallrand_chacha_u64.rs  smallrand_xoshiro_fill_u8.rs  smallrand_xoshiro_range.rs  smallrand_xoshiro_range_f64.rs  smallrand_xoshiro_u64.rs
